# nft-machine

./: .gitignore  Anchor.toml  CLAUDE.md  index.html
.github/workflows/: deploy.yml
app/: index.html  package-lock.json  package.json  vite.config.js
app/src/: main.js  merkle.js  program.js  rpc.js  style.css  upload.js  wallet.js
assets/: arweave-BDROSyOp.js  arweave-D8sPRd1g.js  index-DZYCpxK-.js  index-DiSqB6lO.css  index-S60cbql9.js  irys-BSkWRi28.js  irys-DWn4h7Zh.js  solana-5qhFvexm.js  solana-DAy5izVW.js
programs/mint-machine/: Cargo.toml
programs/mint-machine/src/: error.rs  lib.rs  state.rs
programs/mint-machine/src/instructions/: add_items.rs  initialize.rs  mint_nft.rs  mod.rs  set_paused.rs  withdraw.rs
