[package]
name = "mint-machine"
version = "0.1.0"
description = "Solana Skills-compliant NFT minting machine using Token-2022"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mint_machine"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token_2022", "token_2022_extensions"] }
spl-token-2022 = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.4.0"
sha3 = "0.10"
